[metadata]
name = locoAPI-tsuAquila
version = 0.0.1
author = tsuAquila
author_email = reenacottage@gmail.com
description = API for LOCO.gg
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tsuAquila/locoAPI
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src